Fixed the issua of overlaping rounding when placing the ships

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -154,42 +154,26 @@ button:disabled {
   width: 35px;
 }
 
-.h-horizontally-start {
+.horizontally-start,
+.h-horizontally-start:not(.ship) {
   border-top-left-radius: 50%;
   border-bottom-left-radius: 50%;
 }
 
-.h-horizontally-end {
+.horizontally-end,
+.h-horizontally-end:not(.ship) {
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
 }
 
-.h-vertically-start {
+.vertically-start,
+.h-vertically-start:not(.ship) {
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
 }
 
-.h-vertically-end {
-  border-bottom-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-}
-
-.horizontally-start {
-  border-top-left-radius: 50%;
-  border-bottom-left-radius: 50%;
-}
-
-.horizontally-end {
-  border-top-right-radius: 50%;
-  border-bottom-right-radius: 50%;
-}
-
-.vertically-start {
-  border-top-left-radius: 50%;
-  border-top-right-radius: 50%;
-}
-
-.vertically-end {
+.vertically-end,
+.h-vertically-end:not(.ship){
   border-bottom-left-radius: 50%;
   border-bottom-right-radius: 50%;
 }
